# attentionheadgenome

./: .gitignore  08_real_speedup.py  09_early_exit.py  10_prod_grade_speedup.py  11_research_paper_proof.py  13_niah_benchmark.py  DYNAMIC_O_N_ROUTER_MECHANICS.md  HeadGenome_Part2_Plan.md  HeadGenome_Part3_Plan.md  O_N_ROUTER_GUIDE.md  PHASE1_UNIVERSAL_ALGORITHM_REPORT.md  README.md  REPRODUCIBILITY.md  UNIVERSAL_HEAD_MECHANICS.md  audit_head_vocabulary.py  build_report_chunk1.py  build_report_chunk2.py  build_report_chunk3.py  consolidated_research_report.md  diag_centroids.py  diagnose_canonical.py  doc.md  early_exit_log.txt  generate_headgenome_atlas.py  generate_real_headgenome_map.py  generate_taxonomy_figures.py  head_development_lifecycle.md  head_types_taxonomy.md  headgenome_laws.md  measure_speedup.py  niah_log.txt  patch_phase10_reports.py  phase10_vq_universality.py  phase11_cross_domain_proof.py  phase2_eval_log.txt  phase3_log.txt  phi_gpt_log.txt  plan-latest.md  plan.md  plot_developmental_curve.py  (+12 more)
docs/: empirical_findings.md  head_development_lifecycle.md  plan-latest.md  plan.md
final_artifacts/: HeadGenome_Master_Report.md  plot_second_axis.py
headgenome2_circuits/: 00_build_datasets.py  HEADGENOME2_PLAN.md  findings-phase2-hg.md
headgenome3_layers/: implementation_plan.md
isa-head/: FDR_LEDGER.md  causal_ablation.py  (+30 more)
lib/: pyproject.toml
lib/headgenome/: __init__.py  compiler.py  config.py  taxonomy.py
lib/headgenome/backends/: __init__.py  flex.py  torch_mask.py
lib/headgenome/benchmarks/: __init__.py  niah.py  ppl.py  speed.py
(+640 files in other folders)
