[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "headgenome"
version = "0.1.0"
description = "Attention Head Taxonomy for Efficient LLM Inference"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5",
    "transformers>=4.40",
    "datasets>=2.0",
]

[project.scripts]
headgenome = "headgenome.cli:main"

[tool.setuptools.packages.find]
where = ["."]
